# develops-task-management

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_ACTIONS_DEPLOYMENT.md  GITHUB_CLI_SETUP.md  GITHUB_SECRETS_SETUP.md  QUICK_SETUP.md  README.md  docker-compose.yml  nginx.conf  start.ps1
.github/workflows/: cd-pipeline.yml  cd.yml  ci.yml  dast.yml  security.yml  terraform.yml
.zap/: rules.tsv
ansible/: ansible.cfg
ansible/inventory/: azure_rm.yml  hosts
ansible/playbooks/: setup-server.yml
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/auth/: __init__.py  jwt.py  password.py  rbac.py
backend/database/: __init__.py  session.py
backend/models/: __init__.py  attachment.py  audit_log.py  security_event.py  task.py  user.py
backend/routes/: __init__.py  admin.py  auth.py  tasks.py
backend/schemas/: __init__.py  auth.py  task.py  user.py
docs/: DEPLOYMENT.md  SECURITY.md  TROUBLESHOOTING.md
frontend/: .eslintrc.cjs  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx  TaskCard.jsx  TaskForm.jsx  (+1 more)
scripts/: README.md  extract-terraform-outputs.ps1  github-secrets.txt  setup-github-secrets.ps1  upload-github-secrets.ps1
terraform/: acr_pass.txt  backend.tf  frontend_url.txt  main.tf  outputs.json  outputs.tf  outputs_final.json  terraform.tfvars  terraform_key  terraform_key.pub  variables.tf
(+18 files in other folders)
